v3/egress-gw-after-some-sweating/mtls-curl.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: "curl"
spec:
  mtls:
    mode: STRICT
