v3/egress-gw-after-some-sweating/curl-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: curl
  name: curl
  namespace: curl
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: curl
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: curl
    spec:
      containers:
        - command:
            - /bin/sleep
            - infinity
          image: quay.io/sail-dev/curl
          imagePullPolicy: IfNotPresent
          name: curl
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/curl/tls
              name: secret-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: curl
      serviceAccountName: curl
      terminationGracePeriodSeconds: 0
      volumes:
        - name: secret-volume
          secret:
            defaultMode: 420
            optional: true
            secretName: curl-secret
