v3/egress-gw-after-some-sweating/egress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: egress-gw
  namespace: curl
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      istio: egress-gw
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      creationTimestamp: null
      labels:
        istio: egress-gw
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: auto
          imagePullPolicy: Always
          name: istio-proxy
          ports:
            - containerPort: 15090
              name: http-envoy-pro
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        sysctls:
          - name: net.ipv4.ip_unprivileged_port_start
            value: "0"
      serviceAccount: secret-reader
      serviceAccountName: secret-reader
      terminationGracePeriodSeconds: 30
