v3/egress-gw-after-some-sweating/curl-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: curl
    service: curl
  name: curl
  namespace: curl
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: curl
  sessionAffinity: None
  type: ClusterIP
