v3/egress-gw-after-some-sweating/egress-gw-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: egress-gw
  namespace: curl
spec:
  clusterIP: 172.30.178.3
  clusterIPs:
    - 172.30.178.3
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    istio: egress-gw
  sessionAffinity: None
  type: ClusterIP
