v3/egress-gw-after-some-sweating/egress-se.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  annotations:
  name: egress-se
  namespace: curl
spec:
  hosts:
    - docs.redhat.com
  location: MESH_EXTERNAL
  ports:
    - name: http-port
      number: 80
      protocol: HTTP
  resolution: DNS
