v3/egress-gw-after-some-sweating/egress-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
  name: egress-vs
  namespace: curl
spec:
  gateways:
    - mesh
    - curl/egress-gw
  hosts:
    - docs.redhat.com
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: egress-gw.curl.svc.cluster.local
            port:
              number: 80
            subset: rh-docs
          weight: 100
    - match:
        - gateways:
            - curl/egress-gw
          port: 80
      route:
        - destination:
            host: docs.redhat.com
            port:
              number: 80
          weight: 100
