v3/egress-gw-after-some-sweating/mtls-dr-curl.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: enable-mtls
  namespace: curl
spec:
  host: "*.curl.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
