v3/egress-gw-after-some-sweating/originate-for-docs-rdhat-com-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  annotations:
  name: originate-for-docs-redhat-com
  namespace: curl
spec:
  host: docs.redhat.com
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 80
